--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ nav ul li a:hover {
 
 /* Hero Section */
 #hero {
-    background: url('assets/background-cracker1.png') no-repeat center/cover;
+    background-image: url('../assets/background-cracker1.png') no-repeat center/cover;
     /* background-color: #3498db; */
     color: white; 
     text-align: center;
